@@ -162,11 +162,17 @@ sub initialized {
 
 sub initialize {
     my $self   = shift;
-    my $schema = $self->registry;
     hurl engine => __x(
         'Sqitch schema "{schema}" already exists',
-        schema => $schema
+        schema => $self->registry
     ) if $self->initialized;
+    $self->_run_registry_file( file(__FILE__)->dir->file('pg.sql') );
+    $self->_register_release;
+}
+
+sub _run_registry_file {
+    my ($self, $file) = @_;
+    my $schema = $self->registry;
 
     # Check the client version.
     my ($maj, $min);
@@ -186,8 +192,6 @@ sub initialize {
          WHERE nspname = 'pg_catalog'
            AND proname = 'pgxc_version';
     });
-
-    my $file = file(__FILE__)->dir->file('pg.sql');
 
     if ($maj < 9) {
         # Need to write a temp file; no :"registry" variable syntax.
@@ -213,7 +217,6 @@ sub initialize {
     }
 
     $self->dbh->do('SET search_path = ?', undef, $schema);
-    $self->_register_release;
 }
 
 # Override to lock the changes table. This ensures that only one instance of
@@ -243,6 +246,10 @@ sub run_verify {
 sub run_handle {
     my ($self, $fh) = @_;
     $self->_spool($fh);
+}
+
+sub run_upgrade {
+    shift->_run_registry_file(@_);
 }
 
 # Override to avoid cast errors, and to use VALUES instead of a UNION query.
